Table users {
  id int [pk, increment]
  telegram_id Optional[int] [unique]
  username VARCHAR(30) [not null, unique]
  hash_password VARCHAR(255) [not null]
  register_at datetime [not null, default: 'now()']
}

Table records {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  title VARCHAR(255) [not null, default: 'Новая запись']
  content VARCHAR(10000) [not null, default: '']
  created_at datetime [not null, default: 'now()']
  updated_at datetime [not null, default: 'now()']
}

Table notifications {
  id int [pk, increment]
  record_id int [unique, not null, ref: > records.id]
  notify_on datetime [not null]
  repeat RepeatStatus [not null, default: 'OFF']
  sent_at Optional[datetime]
}